<resources>
    <string name="app_name">Rottco Synergy</string>
    <string name="sign_up_question">Nu ai un cont Synergy inca? Sign-up</string>
    <string name="sign_up_answer">Sign-up</string>
    <string name="registration_nickname">Numele si prenumele</string>
    <string name="registration_email">Adresa de email</string>
    <string name="registration_password">Parola</string>
    <string name="welcome">W e l c o m e</string>
    <string name="loginMail">Adresa de mail</string>
    <string name="loginParola">Parola</string>
    <string name="rememberMe">Tine-ma minte</string>
    <string name="login">LOG-IN</string>
    <string name="facebookLogin">Facebook Login</string>
    <string name="facebook_app_id">155206278415789</string>
    <string name="google_api_key">AIzaSyBnUp89DgH078dSqYWdtA6yVH_9fHbxE6s</string>
    <string name="fb_login_protocol_scheme">fb155206278415789</string>
    <string name="app_name_facebook">SYNERGY by rottco</string>
    <string name="feeling_lazy">Feeling lazy? Import your profile from Facebook</string>
    <string name="foloseste_fb">Foloseste profilul Facebook</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="trimite">TRIMITE</string>
    <string name="whatDistance">La ce distanta fata de pozitia ta actuala?</string>
    <string name="whatServices">Ce tipuri de servicii?</string>
    <string name="automatDeCafea">Automat de Cafea</string>
    <string name="automatDeCeai">Automat de Ceai</string>
    <string name="cafeaProaspat">Cafea Proaspat Prajita</string>
    <string name="restaurant">Restaurant</string>
    <string name="sandwichuriPreambalate">Sandwich-uri Preambalate</string>
    <string name="superMarket">Super Market</string>
    <string name="nonAlcAndAlc">Vitrina cu Bauturi Alcoolice si Nonalcoolice</string>
    <string name="whatPayment">Ce tipuri de plati?</string>
    <string name="Maestro">Maestro</string>
    <string name="MasterCard">MasterCard</string>
    <string name="MasterCardGold">MasterCard Gold</string>
    <string name="MasterCardPlatinum">MasterCard Platinum</string>

    <string name="Visa">Visa</string>
    <string name="VisaElectron">Visa Electron</string>
    <string name="VisaGold">Visa Gold</string>
    <string name="VisaInfinit">Visa Infinit</string>
    <string name="VisaPlatinum">Visa Platinum</string>
    <string name="supportTitle">S.C. ROTTCO CONSULT S.R.L</string>
    <string name="contactTitle">Contact</string>
    <string name="strada">Str. Erou Iancu Nicolae, Nr 154 D, Loc. Voluntari, Jud. Ilfov</string>
    <string name="punctDeLucru">Punct de lucru:</string>
    <string name="email">E-mail:</string>
    <string name="emailAddress">office@rottco.ro</string>

    <string name="my_link"><a href="http://somesite.com/">Click me!</a></string>
    <string name="tel">Tel:</string>
    <string name="telNumber">021/232 09 50</string>
    <string name="faxOne">Fax:</string>
    <string name="faxNumberOne">021/232 09 52</string>
    <string name="faxTwo">Fax:</string>
    <string name="faxNumberTwo">0372/87 41 27</string>
    <string name="departamentDeVanzari">Departamentul Vanzari:</string>
    <string name="ionut">Ionut Dragan - Director Vanzari</string>
    <string name="telNumberIonut">0722.553.450</string>
    <string name="emailAddressIonut">ionut.dragan@rottco.ro</string>
    <string name="radu">Radu Dragan - Director zonal Vanzari</string>
    <string name="telNumberRadu">0722.553.536</string>
    <string name="emailAddressRadu">radu.dragan@rottco.ro</string>


    <string name="andrei">Andrei Sima - Director zonal Vanzari</string>
    <string name="telNumberAndrei">0722.250.736</string>
    <string name="emailAddressAndrei">andrei.sima@rottco.ro</string>
    <string name="salveaza">SALVEAZA</string>

</resources>
