<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical">
<LinearLayout
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="wrap_content">

    <TextView
        android:layout_width="match_parent"
        android:text="@string/whatDistance"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/textView"
        android:layout_margin="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <SeekBar
        android:id="@+id/seekBar"
        android:max="100"
        android:progress="50"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <TextView
        android:layout_width="match_parent"
        android:text="@string/whatServices"
        android:textStyle="bold"
        android:layout_marginStart="10dp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        android:textColor="@color/md_black_1000"
        android:textSize="16sp"
        android:layout_height="wrap_content" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginBottom="10dp"
        android:drawableStart="@drawable/coffeemachine"
        android:text="@string/automatDeCafea"
        android:layout_height="wrap_content" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginBottom="10dp"
        android:drawableStart="@drawable/coffeemachine"
        android:text="@string/automatDeCeai"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="wrap_content"
        android:drawableStart="@drawable/coffeeicon"
        android:text="@string/cafeaProaspat"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="15dp"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_marginStart="15dp"
        android:drawableStart="@drawable/restaurantred"
        android:text="@string/restaurant"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_marginStart="15dp"
        android:drawableStart="@drawable/restaurant"
        android:text="@string/sandwichuriPreambalate"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_marginStart="15dp"
        android:drawableStart="@drawable/magazin"
        android:text="@string/superMarket"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_marginStart="15dp"
        android:drawableStart="@drawable/shape"
        android:text="@string/superMarket"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="match_parent"
        android:text="@string/whatPayment"
        android:textStyle="bold"
        android:textColor="@color/md_black_1000"
        android:textSize="20sp"
        android:layout_height="wrap_content" />

    <CheckBox
        android:layout_width="wrap_content"
        android:text="@string/Maestro"
        android:layout_height="wrap_content" />
    <CheckBox
        android:layout_width="wrap_content"
        android:text="@string/MasterCard"
        android:layout_height="wrap_content" />
    <CheckBox
        android:layout_width="wrap_content"
        android:text="@string/MasterCardGold"
        android:layout_height="wrap_content" />
    <CheckBox
        android:layout_width="wrap_content"
        android:text="@string/MasterCardPlatinum"
        android:layout_height="wrap_content" />

    <CheckBox
        android:layout_width="wrap_content"
        android:text="@string/Visa"
        android:layout_height="wrap_content" />
    <CheckBox
        android:layout_width="wrap_content"
        android:text="@string/VisaElectron"
        android:layout_height="wrap_content" />
    <CheckBox
        android:layout_width="wrap_content"
        android:text="@string/VisaGold"
        android:layout_height="wrap_content" />
    <CheckBox
        android:layout_width="wrap_content"
        android:text="@string/VisaInfinit"
        android:layout_height="wrap_content" />
    <CheckBox
        android:layout_width="wrap_content"
        android:text="@string/VisaPlatinum"
        android:layout_height="wrap_content" />
</LinearLayout>
</ScrollView>