<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout
        android:orientation="vertical" android:layout_width="match_parent"
        android:background="#ffffff"

        android:layout_height="match_parent">
        <include layout="@layout/toolbar_support" />

        <TextView
            android:layout_width="match_parent"
            android:textColor="@color/md_red_900"
            android:text="@string/supportTitle"
            android:textStyle="bold"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:textSize="18sp"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_width="match_parent"
            android:textColor="@color/md_black_1000"
            android:layout_marginTop="25dp"
            android:text="@string/contactTitle"
            android:textStyle="bold"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:textSize="16sp"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_width="match_parent"
            android:textColor="@color/md_black_1000"
            android:layout_marginTop="15dp"
            android:text="@string/strada"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:textSize="14sp"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_width="match_parent"
            android:textColor="@color/md_black_1000"
            android:layout_marginTop="20dp"
            android:text="@string/punctDeLucru"
            android:textStyle="bold"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:textSize="16sp"
            android:layout_height="wrap_content" />
        <TextView
        android:layout_width="match_parent"
        android:textColor="@color/md_black_1000"
        android:layout_marginTop="15dp"
        android:text="@string/strada"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:textSize="14sp"
        android:layout_height="wrap_content" />
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_marginTop="15dp"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:textColor="@color/md_black_1000"
                android:text="@string/email"
                android:paddingStart="20dp"
                android:paddingEnd="5dp"
                android:textSize="14sp"
                android:layout_height="wrap_content" />
            <TextView
                android:layout_width="wrap_content"
                android:gravity="start"
                android:textColorLink="@android:color/holo_blue_dark"
                android:text="@string/emailAddress"
                android:textAlignment="textStart"
                android:autoLink="email"
                android:textSize="14sp"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_marginTop="15dp"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:textColor="@color/md_black_1000"
                android:text="@string/tel"
                android:paddingStart="20dp"
                android:paddingEnd="5dp"
                android:textSize="14sp"
                android:layout_height="wrap_content" />
            <TextView
                android:layout_width="wrap_content"
                android:gravity="start"
                android:text="@string/telNumber"
                android:textAlignment="textStart"
                android:autoLink="all"
                android:textColorLink="@android:color/holo_blue_dark"
                android:textSize="14sp"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_marginTop="15dp"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:textColor="@color/md_black_1000"
                android:text="@string/faxOne"
                android:paddingStart="20dp"
                android:paddingEnd="5dp"
                android:textSize="14sp"
                android:layout_height="wrap_content" />
            <TextView
                android:layout_width="wrap_content"
                android:gravity="start"
                android:text="@string/faxNumberOne"
                android:textAlignment="textStart"
                android:autoLink="all"
                android:textColorLink="@android:color/holo_blue_dark"
                android:textSize="14sp"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_marginTop="15dp"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:textColor="@color/md_black_1000"
                android:text="@string/faxTwo"
                android:paddingStart="20dp"
                android:paddingEnd="5dp"
                android:textSize="14sp"
                android:layout_height="wrap_content" />
            <TextView
                android:layout_width="wrap_content"
                android:gravity="start"
                android:text="@string/faxNumberTwo"
                android:textAlignment="textStart"
                android:autoLink="all"
                android:textColorLink="@android:color/holo_blue_dark"
                android:textSize="14sp"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:textColor="@color/md_black_1000"
            android:layout_marginTop="20dp"
            android:text="@string/departamentDeVanzari"
            android:textStyle="bold"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:textSize="16sp"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="match_parent"
            android:textColor="@color/md_black_1000"
            android:layout_marginTop="15dp"
            android:text="@string/ionut"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:textSize="14sp"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_marginTop="15dp"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:textColor="@color/md_black_1000"
                android:text="@string/tel"
                android:paddingStart="20dp"
                android:paddingEnd="5dp"
                android:textSize="14sp"
                android:layout_height="wrap_content" />
            <TextView
                android:layout_width="wrap_content"
                android:gravity="start"
                android:text="@string/telNumberIonut"
                android:textAlignment="textStart"
                android:autoLink="all"
                android:textColorLink="@android:color/holo_blue_dark"
                android:textSize="14sp"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_marginTop="15dp"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:textColor="@color/md_black_1000"
                android:text="@string/email"
                android:paddingStart="20dp"
                android:paddingEnd="5dp"
                android:textSize="14sp"
                android:layout_height="wrap_content" />
            <TextView
                android:layout_width="wrap_content"
                android:gravity="start"
                android:textColorLink="@android:color/holo_blue_dark"
                android:text="@string/emailAddressIonut"
                android:textAlignment="textStart"
                android:autoLink="email"
                android:textSize="14sp"
                android:layout_height="wrap_content" />
        </LinearLayout>


        <TextView
            android:layout_width="match_parent"
            android:textColor="@color/md_black_1000"
            android:layout_marginTop="25dp"
            android:text="@string/radu"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:textSize="14sp"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_marginTop="15dp"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:textColor="@color/md_black_1000"
                android:text="@string/tel"
                android:paddingStart="20dp"
                android:paddingEnd="5dp"
                android:textSize="14sp"
                android:layout_height="wrap_content" />
            <TextView
                android:layout_width="wrap_content"
                android:gravity="start"
                android:text="@string/telNumberRadu"
                android:textAlignment="textStart"
                android:autoLink="all"
                android:textColorLink="@android:color/holo_blue_dark"
                android:textSize="14sp"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_marginTop="15dp"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:textColor="@color/md_black_1000"
                android:text="@string/email"
                android:paddingStart="20dp"
                android:paddingEnd="5dp"
                android:textSize="14sp"
                android:layout_height="wrap_content" />
            <TextView
                android:layout_width="wrap_content"
                android:gravity="start"
                android:textColorLink="@android:color/holo_blue_dark"
                android:text="@string/emailAddressRadu"
                android:textAlignment="textStart"
                android:autoLink="email"
                android:textSize="14sp"
                android:layout_height="wrap_content" />
        </LinearLayout>


        <TextView
            android:layout_width="match_parent"
            android:textColor="@color/md_black_1000"
            android:layout_marginTop="25dp"
            android:text="@string/andrei"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:textSize="14sp"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_marginTop="15dp"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:textColor="@color/md_black_1000"
                android:text="@string/tel"
                android:paddingStart="20dp"
                android:paddingEnd="5dp"
                android:textSize="14sp"
                android:layout_height="wrap_content" />
            <TextView
                android:layout_width="wrap_content"
                android:gravity="start"
                android:text="@string/telNumberAndrei"
                android:textAlignment="textStart"
                android:autoLink="all"
                android:textColorLink="@android:color/holo_blue_dark"
                android:textSize="14sp"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="20dp"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:textColor="@color/md_black_1000"
                android:text="@string/email"
                android:paddingStart="20dp"
                android:paddingEnd="5dp"
                android:textSize="14sp"
                android:layout_height="wrap_content" />
            <TextView
                android:layout_width="wrap_content"
                android:gravity="start"
                android:textColorLink="@android:color/holo_blue_dark"
                android:text="@string/emailAddressAndrei"
                android:textAlignment="textStart"
                android:autoLink="email"
                android:textSize="14sp"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>
