<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="0px"
        android:layout_weight="28">
        <ImageView
            android:layout_width="wrap_content"
            android:src="@drawable/logowelcomescreen"
            android:layout_centerHorizontal="true"
            android:layout_above="@+id/localTvWelcome"
            android:paddingBottom="5dp"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/localTvWelcome"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:text="@string/welcome"
            android:textSize="20sp"
            android:paddingBottom="5dp"
            android:textStyle="bold" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0px"
        android:paddingTop="20dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_weight="31">

        <LinearLayout
            android:layout_width="0px"
            android:layout_height="match_parent"
            android:layout_weight="23">
        </LinearLayout>

        <RelativeLayout
            android:layout_width="0px"
            android:layout_height="match_parent"
            android:layout_weight="54">
            <EditText
                android:layout_width="match_parent"
                android:hint="@string/loginMail"
                android:drawableLeft="@drawable/shapemail"
                android:paddingLeft="15dp"
                android:inputType="textEmailAddress"
                android:paddingTop="10dp"
                android:id="@+id/etEmail"
                android:paddingBottom="10dp"
                android:drawablePadding="10dp"
                android:background="#F8F7FB"
                android:maxLines="1"
                android:scrollHorizontally="true"
                android:ellipsize="end"
                android:layout_height="wrap_content" />
            <EditText
                android:layout_width="match_parent"
                android:layout_marginTop="10dp"
                android:hint="@string/loginParola"
                android:inputType="textPassword"
                android:drawableLeft="@drawable/lock"
                android:paddingLeft="15dp"
                android:layout_below="@+id/etEmail"
                android:paddingTop="10dp"
                android:id="@+id/etPassword"
                android:paddingBottom="10dp"
                android:drawablePadding="10dp"
                android:background="#F8F7FB"
                android:layout_height="wrap_content" />

            <CheckBox

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rememberMe"
                android:layout_alignParentStart="true"
                android:layout_marginTop="10dp"
                android:layout_below="@+id/etPassword" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="0px"
            android:layout_height="match_parent"
            android:layout_weight="23">

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0px"
        android:layout_weight="31">

        <RelativeLayout
            android:layout_width="0px"
            android:layout_height="match_parent"
            android:layout_weight="26">
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0px"
            android:layout_height="match_parent"
            android:layout_weight="48">
            <Button
                android:layout_width="match_parent"
                android:layout_marginTop="20dp"
                android:textColor="#ffffff"
                android:id="@+id/bLogin"
                android:background="#BB001D"
                android:text="@string/login"
                android:layout_height="wrap_content" />
            <!--<TextView-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_below="@+id/bLogin"-->
                <!--android:layout_marginTop="20dp"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:drawableLeft="@drawable/f124010"-->
                <!--android:drawablePadding="10dp"-->
                <!--android:padding="10dp"-->
                <!--android:textColor="#3D579F"-->
                <!--android:textStyle="bold"-->
                <!--android:text="@string/facebookLogin"-->
                <!--android:layout_centerHorizontal="true"-->
                <!--/>-->
            <com.facebook.login.widget.LoginButton
                android:id="@+id/login_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="30dp"
                android:layout_below="@+id/bLogin"
                android:layout_marginBottom="30dp" />




        </RelativeLayout>
        <LinearLayout
            android:layout_width="0px"
            android:layout_height="match_parent"
            android:layout_weight="26">
        </LinearLayout>
    </LinearLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0px"
        android:layout_weight="10">

        <TextView
            android:id="@+id/localTvQuestion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:paddingBottom="10dp"
            android:paddingRight="5dp"
            android:text="@string/sign_up_question" />
        <TextView
            android:id="@+id/tvSignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/localTvQuestion"
            android:layout_toRightOf="@id/localTvQuestion"
            android:text="@string/sign_up_answer"
            android:textColor="#ff0000" />
    </RelativeLayout>
</LinearLayout>